--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
-<html lang="ko" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="main.css">
-  </head>
-  <body>
-<div class="one">
-  GARDEN
-</div>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WAS-였다">
+    <meta name="keywords" content="지식정보 일반정보 알쓸잡 일반적이고 특별하지 않는 슈퍼노멀 정보 블로그 - 였다">
+    <meta name="author" content="WAS 였다">
+    <meta property="og:title" content="WAS 였다 블로그">
+    <meta property="og:description" content="WAS-였다">
+    <meta property="og:image" content="/images/og-image.jpg">
+    <meta property="og:url" content="https://www.cosworker.com">
+    <title>WAS-였다</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;500&display=swap">
+    <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-<div class="square">
-  <div class="two">
-    <a href="about.html"> <img src="/Users/ari/Downloads/IMG_4059.jpg" alt="GARDEN"></a>
-  </div>
-  <div class="two">
-    <img src="/Users/ari/Downloads/IMG_4059.jpg" alt="GARDEN">
-  </div>
-  <div class="three">
+</head>
+<body>
+    <div id="header"></div>
 
-  </div>
-  <div class="three">
-
-  </div>
-</div>
-
-  </body>
+    <main class="main">
+        <section class="article">
+            <h1>노멀한 정보</h1>
+            <p>세상 살면서 겪었던 미세한 정보 모음</p>
+        </section>
+    </main>
+    <div id="recommend"></div>
+    <div id="footer"></div>
+<script>
+  $(function(){
+    $("#header").load("header.html");
+    $("#recommend").load("recommend.html");
+    $("#footer").load("footer.html");
+  });
+</script>
+</body>
 </html>
