--- a/20250224.html
+++ b/20250224.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WAS-였다">
-    <meta name="keywords" content="지식정보 일반정보 알쓸잡 일반적이고 특별하지 않는 슈퍼노멀 정보 블로그 - 였다">
-    <meta name="author" content="WAS 였다">
-    <meta property="og:title" content="WAS 였다 블로그">
-    <meta property="og:description" content="WAS-였다">
-    <meta property="og:image" content="/images/og-image.jpg">
-    <meta property="og:url" content="https://www.cosworker.com">
+    <meta name="description" content="캡틴 아메리카 브레이브 뉴 월드">
+    <meta name="keywords" content="캡틴 아메리카:브레이브 뉴 월드 리뷰-쿠키영상">
+    <meta name="author" content="AAA">
+    <meta property="og:title" content="캡틴 아메리카 브레이브 뉴 월드 영화리뷰">
+    <meta property="og:description" content="캡틴 아메리카 브레이브 뉴 월드 쿠키">
+    <meta property="og:image" content="captain.png">
+    <meta property="og:url" content="https://noextra0.github.io/blog/20250224.html">
     <title>WAS-였다</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;500&display=swap">
