--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <section class="article">
             <h1>노멀한 정보</h1>
             <p>세상 살면서 겪었던 미세한 정보 모음</p>
+<hr>
+<table>
+  <ul>
+<li><a href='20250224.html'>캡틴 아메리카:브레이브 뉴 월드 영화리뷰</li>
+<li><a href='20250224.html'>캡틴 아메리카:브레이브 뉴 월드 영화리뷰</li>
+  <li><a href='20250224.html'>캡틴 아메리카:브레이브 뉴 월드 영화리뷰</li>
+  </ul>
+</table>
         </section>
     </main>
     <div id="recommend"></div>
