--- a/20250224.html
+++ b/20250224.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="캡틴 아메리카 브레이브 뉴 월드 쿠키">
     <meta property="og:image" content="captain.png">
     <meta property="og:url" content="https://noextra0.github.io/blog/20250224.html">
-    <title>WAS-였다</title>
+    <title>캡틴 아메리카: 브레이브 뉴 월드 영화리뷰 쿠키영상</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;500&display=swap">
     <link rel="stylesheet" href="style.css">
@@ -24,7 +24,7 @@
             <h1>‘캡틴 아메리카: 브레이브 뉴 월드’ 영화 리뷰 - 쿠키 영상까지!</h1>
             <p>샘 윌슨의 새로운 캡틴 아메리카와 MCU의 미래</p>
             <div class="ad"><br><br><br></div>
-            <p>2025년 2월 12일 개봉한 **‘캡틴 아메리카: 브레이브 뉴 월드’**는 샘 윌슨이 캡틴 아메리카로서의 역할을 맡게 되는 중요한 영화입니다. 이 작품은 MCU의 향후 전개를 예고하는 영화로, 앤서니 매키와 해리슨 포드의 출연이 큰 화제를 모았습니다. 이번 영화에서는 샘 윌슨이 리더십을 발휘하며 새로운 적들과 싸워 나가는 과정이 중심 이야기입니다.
+            <p>2025년 2월 12일 개봉한 ‘캡틴 아메리카: 브레이브 뉴 월드’는 샘 윌슨이 캡틴 아메리카로서의 역할을 맡게 되는 중요한 영화입니다. 이 작품은 MCU의 향후 전개를 예고하는 영화로, 앤서니 매키와 해리슨 포드의 출연이 큰 화제를 모았습니다. 이번 영화에서는 샘 윌슨이 리더십을 발휘하며 새로운 적들과 싸워 나가는 과정이 중심 이야기입니다.
 
 영화 줄거리 – 샘 윌슨의 새로운 리더십
 샘 윌슨(앤서니 매키)은 스티브 로저스의 뒤를 이어 캡틴 아메리카로서의 책임을 짊어지게 됩니다. 미국 정부와의 정치적 갈등, 그리고 새로운 슈퍼 솔저들과의 전투 속에서 샘은 리더로서의 자질을 인정받게 됩니다.
