--- a/20250225_1.html
+++ b/20250225_1.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="임산부 백일해 예방접종">
     <meta property="og:description" content="임산부 백일해 접종">
     <meta property="og:image" content="pregnant.jpg">
-    <meta property="og:url" content="https://noextra0.github.io/blog/20250224.html">
+    <meta property="og:url" content="https://noextra0.github.io/blog/20250225_1.html">
     <title>임산부 백일해 접종: 똑똑한 엄마의 선택, 우리 아기 100일 건강 선물!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;500&display=swap">
