--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 <table>
   <ul>
 <li><a href='20250224.html'>캡틴 아메리카:브레이브 뉴 월드 영화리뷰</li>
-<li><a href='20250225_1.html'>임산부 백일해 접종 시기</li>
+<li><a href='20250226_1.html'>지출증빙 vs 소득공제: 직장인·사업자 세금 줄이는 법 완벽 정리</li>
   <li><a href='20250225_2.html'>DALL·E (달리) vs. MidJourney (미드저니)</li>
+    <li><a href='20250225_1.html'>임산부 백일해 접종 시기</li>
   </ul>
 </table>
         </section>
