--- a/20250226_1.html
+++ b/20250226_1.html
@@ -29,17 +29,17 @@
             <p>지출증빙: 영수증으로 증명하기<br>
               지출증빙은 돈 쓴 걸 증명하는 영수증이나 카드 내역이에요.<br>
 
-              예: 회사에서 점심값 2만 원 청구 시 영수증 제출.<br>
+              예: 회사에서 점심값 2만 원 청구 시 영수증 제출.<br><br>
 
               누구에게 필요할까?<br>
 
               직장인: 경비 청구(식대, 교통비).<br>
               사업자: 사업비 증명(재료비, 임대료).<br>
-              프리랜서: 비용 인정용.<br>
+              프리랜서: 비용 인정용.<br><br>
               근로자 vs 사업자:<br>
 
               근로자: 경비 청구에 유용하지만 세금 감소엔 영향 적음. 예: 직장인 A씨는 식대 10만 원 돌려받음.<br>
-              사업자: 과세 소득 줄이려면 필수. B씨는 재료비로 200만 원 세금 절약. "지출증빙 서류 챙기는 법" 검색 필수!<br>
+              사업자: 과세 소득 줄이려면 필수. B씨는 재료비로 200만 원 세금 절약. "지출증빙 서류 챙기는 법" 검색 필수!<br><br>
               핵심:<br>
 
               한도 없음<br>
@@ -49,17 +49,17 @@
               소득공제: 세금 줄이기 핵심<br>
               소득공제는 소득에서 빼줘 세금을 줄이는 혜택이에요. 의료비, 교육비 등이 대상.<br>
 
-              예: 병원비 100만 원 → 소득 감소.<br>
+              예: 병원비 100만 원 → 소득 감소.<br><br>
 
               누구에게 필요할까?<br>
 
               근로소득자: 연말정산 공제.<br>
               자영업자: 신용카드 공제(최대 500만 원).<br>
-              기부자: 기부금 공제.<br>
+              기부자: 기부금 공제.<br><br>
               근로자 vs 사업자:<br>
 
               근로자: 환급 극대화 핵심. 예: 의료비로 50만 원 환급. "연말정산 소득공제 한도" 확인하세요!<br>
-              사업자: 지출증빙 후 활용. 신용카드 한도 500만 원으로 사업자 세금 줄이기 가능.<br>
+              사업자: 지출증빙 후 활용. 신용카드 한도 500만 원으로 사업자 세금 줄이기 가능.<br><br>
               핵심:<br>
 
               한도 있음 (신용카드 300만 원 등)<br>
@@ -69,7 +69,7 @@
               연간 환급액 한도: 실제 환급액<br>
               연간 환급액 한도는 줄어든 세금만큼 돌려받는 금액이에요. 미리 낸 세금이 한도.<br>
 
-              예: 세금 50만 원 줄었지만 미리 낸 30만 원만 환급.<br>
+              예: 세금 50만 원 줄었지만 미리 낸 30만 원만 환급.<br><br>
 
               핵심:<br>
 
