--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <li><a href='20250226_1.html'>지출증빙 vs 소득공제: 직장인·사업자 세금 줄이는 법 완벽 정리</li>
   <li><a href='20250225_2.html'>DALL·E (달리) vs. MidJourney (미드저니)</li>
     <li><a href='20250225_1.html'>임산부 백일해 접종 시기</li>
+      <li><a href='20250227.html'>출산 준비물 리스트: 자연분만 vs 제왕절개 완벽 정리</li>
   </ul>
 </table>
         </section>
