--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="logo"><a href="index.html">AAA</a></div>
+    <div class="logo"><a href="index.html">hoots</a></div>
     <nav class="nav">
         <ul>
             <li><a href="#">일반정보</a></li>
