--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WAS-였다">
-    <meta name="keywords" content="지식정보 일반정보 알쓸잡 일반적이고 특별하지 않는 슈퍼노멀 정보 블로그 - 였다">
-    <meta name="author" content="WAS 였다">
-    <meta property="og:title" content="WAS 였다 블로그">
-    <meta property="og:description" content="WAS-였다">
+    <meta name="description" content="hoots">
+    <meta name="keywords" content="알만하고 알 수도 있고 알고 싶었던 것들">
+    <meta name="author" content="hoots">
+    <meta property="og:title" content="hoots">
+    <meta property="og:description" content="hoots">
     <meta property="og:image" content="/images/og-image.jpg">
-    <meta property="og:url" content="https://www.cosworker.com">
-    <title>WAS-였다</title>
+    <meta property="og:url" content="https://noextra0.github.io/blog/index.html">
+    <title>hoots</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;500&display=swap">
     <link rel="stylesheet" href="style.css">
@@ -22,8 +22,8 @@
 
     <main class="main">
         <section class="article">
-            <h1>노멀한 정보</h1>
-            <p>세상 살면서 겪었던 미세한 정보 모음</p>
+            <h1>알만하지만 모를 수도 있는 것</h1>
+            <p>알만하고 알 수도 있고 알고 싶었던 것들</p>
 <hr>
 <table>
   <ul>
